fix spacing on profile post map

--- a/src/components/ImageScroll/ImageScroll.scss
+++ b/src/components/ImageScroll/ImageScroll.scss
@@ -7,8 +7,8 @@
     overflow-x: auto;
     display: flex;
     justify-content: flex-start;
+    margin: 0 10px;
     margin-bottom: 30px;
-    margin-top: 0;
 
     /* width */
     &::-webkit-scrollbar {
