--- a/src/components/ProfilePost/ProfilePost.scss
+++ b/src/components/ProfilePost/ProfilePost.scss
@@ -25,6 +25,7 @@
       width: 50%;
       border-radius: 1px;
       margin-bottom: 15px;
+      margin: 10px;
 
       @media screen and (max-width: $break-tablet) {
         width: 90%;
